--- a/www/index.html
+++ b/www/index.html
@@ -54,7 +54,7 @@
     <script src="js/camera/camera.factory.js"></script>
     <script src="js/camera/grafi.factory.js"></script>
     <script src="js/camera/filter.factory.js"></script>
-
+    <script src="js/settings/settings.factory.js"></script>
 
     <!-- Directives -->
     <script src="js/navbar/navbar.addons/navbar.addons.directive.js"></script>
@@ -88,27 +88,24 @@
 
     <body ng-app="starter">
 
-  <!-- Top navbar that changes based on states -->
-<!--   Camera Navbar -->
     <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
-        <!-- <div ng-hide="getState()"> -->
-       
-        <!-- <ion-nav-back-button hide-back-button="getState()"></ion-nav-back-button> -->
         <ion-nav-buttons side="left">
 
             <button ng-hide="&apos;home&apos; | isState" ng-click="goHome()" class="button icon-left ion-home"></button>
 
           <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
-            <!-- <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button> -->
+          <!--   <button ng-hide="&apos;home&apos; | isState" ui-sref="home" class="button icon-left ion-home"></button> -->
         </ion-nav-buttons>
         <ion-nav-buttons side="right">
-            <!-- <button class="button button-icon ion-ios-email"></button> -->
-            <button ng-if=" &apos;home&apos; | isState" class="button button-icon ion-person-add"></button>
-            <button ui-sref="settings" ng-if=" &apos;home&apos; | isState" class="button button-icon ion-gear-a"></button>       
+           <!--  <button ng-if=" &apos;settings&apos; | isState" class="button button-icon ion-ios-personadd"></button> -->
+            <button ui-sref="story" ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-ios-close-outline"></button>
+            <button ui-sref="settings({userId: user._id})" ng-if=" &apos;home&apos; | isState" class="button button-icon ion-ios-person"></button>
+
             <button ng-if=" &apos;camera&apos; | isState" class="button button-icon ion-checkmark-circled" ng-click="save()"></button>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-nav-view>
-    </ion-nav-view>
+
+    <ion-nav-view></ion-nav-view>
+    
   </body>
 </html>
