user profile complete, minus comic filtered avatar

--- a/www/js/settings/settings.template.html
+++ b/www/js/settings/settings.template.html
@@ -16,13 +16,12 @@
 		<ion-item style="background:transparent; color:white"><b>My username</b>: {{ user.username }}</ion-item>
 					<!-- <button class="btn btn-primary" ui-sref="movieQueue({userId: user._id})">My Stories</button> -->
 		<div class="padding">
-		<button class="button" ng-click="open(email)"><b>Invite My Friends</b></button>
+		<button class="button" ng-click="inviteViaEmail"><b>Invite My Friends</b></button>
 		</div>
 
 		<div class="padding">
 		<button class="button" ui-sref="home"><b>Go to My Stories</b></button>
 		</div>	
-
 
 <!--         <div class="padding">
           <button class="button" ng-click="getContacts()"><b>Get My Contacts</b></button>
