minor revisions to seed.js

--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -80,7 +80,7 @@
 
 		<div ng-if="pictureTaken">
 			<div id="slinky" class="animation-slinky"></div>
-			<div id="slinkyText">Choose Your Filters</div>
+			<!-- <div id="slinkyText">Choose Your Filters</div> -->
 		</div>
 
 
