--- a/www/js/home/home.template.html
+++ b/www/js/home/home.template.html
@@ -1,4 +1,4 @@
-<ion-view scroll="true" view-title="Home">
+<ion-view scroll="true">
   <ion-content style="background-image: url('assets/bwbg.jpg') !important" has-bouncing='true'>
 
 <!-- create story button -->
