--- a/www/js/navbar/navbar.addons/navbar.addons.template.html
+++ b/www/js/navbar/navbar.addons/navbar.addons.template.html
@@ -7,7 +7,8 @@
 	    ng-click="button.function()" 
 	    ng-style="{ 
 	    'width': myWidth(), 
-	    'background-color': button.style['color'], 
+	    'background-color': button.style['background-color'], 
+	    'color': button.style['color'],
 	    'font-weight': button.style['font-weight'] }">
 	    		<div>{{button.state}}</div>
 	    </button>
