--- a/platforms/ios/www/js/camera/camera.template.html
+++ b/platforms/ios/www/js/camera/camera.template.html
@@ -2,10 +2,7 @@
 	<ion-content scroll="false" id="addonWrapper" class="canvasAndAddonContainer">
 
 
-<<<<<<< HEAD
 		<!-- CANVAS -->
-=======
->>>>>>> master
  		<div id="here"></div>
  		<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
  		<img ng-src={{chosenBorder.source}} style="position: absolute; top: 0; left: 0 "></img>
@@ -36,7 +33,6 @@
 			left:0px">
 		</img>	
  
-<<<<<<< HEAD
 
 		<!-- SPEECH/THOUGHT BUBBLES -->	
     	<div
@@ -74,8 +70,6 @@
 		    elastic></textarea>
     	</div>
 
-=======
->>>>>>> master
 
 		<!-- INDICATOR DIVS -->	
 		<div ng-if="!pictureTaken">
@@ -86,17 +80,11 @@
 
 		<div ng-if="pictureTaken">
 			<div id="slinky" class="animation-slinky"></div>
-			<div id="slinkyText">Choose Your Filters</div>
+			<!-- <div id="slinkyText">Choose Your Filters</div> -->
 		</div>
 
-<<<<<<< HEAD
 
 	<!-- BOTTOM NAVBAR DIRECTIVE -->
-=======
-			   
-		<!-- <button class="button" ng-click="saveImage()">Save Image</button> -->
-
->>>>>>> master
 	</ion-content>
   	<div 
   		id="navbarAddonWrapper"
