--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@
 
     <!-- Factories -->
     <script src="js/user/user.factory.js"></script>
+    <script src="js/home/environment.factory.js"></script>
     <script src="js/story/story.factory.js"></script>
     <script src="js/camera/camera.factory.js"></script>
     <script src="js/camera/grafi.factory.js"></script>
